# reserve

./: .env.example  Dockerfile  Makefile  README.md  alembic.ini  apply_server_migrations.py  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_admins_table.py  003_add_branch_layout_json.py  004_guest_id_reservation_code.py  005_add_reservation_qr_code_base64.py  006_add_guests_table.py  007_remove_guests_tg_chat_id_unique_constraint.py
app/: __init__.py  main.py
app/api/: auth.py  deps.py
app/core/: __init__.py  celery_app.py  config.py  database.py  logging.py  redis.py  security.py
app/middleware/: __init__.py  guest.py  request_logging.py
app/models/: __init__.py  admin.py  base.py  branch.py  guest.py  reservation.py  table.py
app/repositories/: __init__.py  admin_repository.py  base.py  branch_repository.py  guest_repository.py  reservation_repository.py  table_repository.py
app/schemas/: __init__.py  auth.py  branch.py  common.py  layout.py  reservation.py  table.py
app/services/: __init__.py  caching_service.py  email_service.py  locking_service.py  notification_service.py  reservation_service.py  tg_service.py  timeslot_service.py
app/tasks/: notifications.py
app/utils/: guest_serializer.py  qr_code.py  tokens.py  validators.py
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx
scripts/: run-populate.sh  seed.py
tests/: test_guest_serializer.py
(+66 files in other folders)
